/*
 * Copyright (C) 2025 Agtonomy
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

/**
 * Note: This file was inspired by eCAL https://projects.eclipse.org/projects/automotive.ecal
 */

syntax = "proto3";

package trellis.core.discovery.pb;

message LayerParShm {
  string memory_file_prefix = 1;  // prefix for memory file names
  uint32 buffer_count = 2;        // number of buffers
}

message TransportConfig  // connection parameter for reader / writer
{
  LayerParShm layer_par_shm = 2;  // parameter for shared memory
}

enum TransportLayerType  // transport layer
{
  tl_none = 0;  // undefined
  tl_shm = 1;   // shared memory
}

message TransportLayer {
  TransportLayerType type = 1;    // transport layer type
  int32 version = 2;              // transport layer version
  TransportConfig par_layer = 3;  // transport layer parameter
}
